--- a/userChrome.css
+++ b/userChrome.css
@@ -9,206 +9,227 @@
 */
 
 
-/* User changable variables */
-
-:root {
-	--tab-font-size: 0.8em; /* Font size of the tab labels */
-	--tab-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; /* The font used for the tab labels */
-	--max-tab-width: none; /* The maximum width a tab in the tab bar can use. Set this to none for no limit */
-	--show-titlebar-buttons: none; /* Hide the buttons (close/minimize/maximize) in the title bar. Required on some platforms (e.g macOS) to fully hide the title bar. `none` hides them, `block` shows them */
-	--tab-height: 20px;
-
-	/* Tab numbering */
-	--tab-number-color: white; /* Change this to whatever color you want the numbers to be */
+/*
+ *  Hide window controls
+ */
+.titlebar-buttonbox-container{
+    display: none !important;
 }
 
-/* Minima Source Code. Here be dragons. */
-/* Only change this if you know what you're doing */
+.titlebar-placeholder,
+#TabsToolbar .titlebar-spacer{ display: none; }
+#navigator-toolbox::after{ display: none !important; }
 
-.titlebar-buttonbox-container {
-	display: var(--show-titlebar-buttons);
-}
 
-:root:not([customizing]) #TabsToolbar {
-	margin-left: 1px !important;
-	margin-right: 1px !important;
-	border-radius: 0 !important;
-	padding: 0 !important;
-}
-.tabbrowser-tab * {
-	margin:0 !important;
-	border-radius: 0 !important;
-	font-family: var(--tab-font-family) !important;
-}
-.tabbrowser-tab {
-	height: var(--tab-height);
-	font-size: var(--tab-font-size) !important;
-	min-height: 0 !important;
-}
-.tabbrowser-tab {
-  position: relative;
-}
-.tabbrowser-tab::after {
-  content: "";
-  position: absolute;
-  top: 23%; /* adjust this value to control the offset from the top */
-  bottom: 23%; /* adjust this value to control the offset from the bottom */
-  right: 0;
-  width: 1px;
-  background-color: #7CFC00; /* replace with your desired color */
-}
-.tabbrowser-tab:last-child::after {
-  display: none; /* remove the line from the last tab */
-}
-.tabbrowser-tab[fadein]:not([pinned]) {
-	max-width: var(--max-tab-width) !important;
-}
-.tab-close-button, .new-tab-button, #firefox-view-button, #scrollbutton-up, .tab-secondary-label {
-	display: none !important;
-}
-.tab-icon-image {
-	height: auto !important;
-	width: calc(var(--tab-height) / 1.5) !important;
-	margin-right: 4px !important;
-}
+/*
+ *  Hide all the clutter in the navbar
+ */
+#main-window :-moz-any(#back-button,
+		       #forward-button,
+		       #stop-reload-button,
+		       #home-button,
+		       #library-button,
+		       #sidebar-button,
+		       #star-button,
+		       #pocket-button,
+		       #save-to-pocket-button,
+		       #permissions-granted-icon,
+		       #fxa-toolbar-menu-button,
+		       #_d7742d87-e61d-4b78-b8a1-b469842139fa_-browser-action, /* Vimium */
+		       #ublock0_raymondhill_net-browser-action) { display: none !important; }
 
-#tabs-newtab-button, #titlebar spacer {
-	display: none !important;
-}
-
-:root:not([customizing]) #nav-bar
-{
-	min-height : 2.0em       !important;
-	height     : 2.0em       !important;
-}
-/* Tab numbering */
-hbox.tab-content::before {
-		margin-top: -10px !important; /* Moves the icon higher */
-    content: counter(tab) ": ";
-    counter-increment: tab;
-    color: white;
-    margin-right: 9px;
-}
-.tab-icon-overlay[soundplaying] {
-	margin-top: -10px !important; /* Moves the icon higher */
-}
-.tab-throbber[busy] {
-	margin-top: -10px !important; /* Moves the icon higher */
-}
-.tab-background {
-		padding: 10px !important;
-		border-radius: 0 !important;
-    margin-block: 1px 0 !important;
-    outline: none !important;   
-}
-.tab-icon-overlay:not([crashed]){
-top: -5.5px;
-inset-inline-end: -6px;
-z-index: 1;
-padding: 2px;
-opacity: 1 !important;
-stroke: var(--tab-icon-overlay-stroke, black) !important;
-}
-	.tab-icon-image,.tab-throbber {
-	  opacity: 1 !important;
-		margin-top: -10px !important; /* Moves the icon higher */
-	}
-	.tab-label {
-		margin-top: -10px !important; /* Adjust this value to move the text higher */
-	}
-
-#personal-bookmarks .bookmark-item > .toolbarbutton-text { font-size:12px !important}
-#personal-bookmarks .bookmark-item > .toolbarbutton-icon { height:20px !important; width:10px !important; }
-#tabbrowser-tabs {
-    --user-tab-rounding: 15px;
-}
-/* Fix for bug 725413 - Separators cause higher bookmark bar in Fx11 on OS X */
-#personal-bookmarks toolbarseparator {
-min-height: 5px !important;
-}
-#PersonalToolbar {
-		height: 15px !important;
-	}
-#PlacesToolbarItems > .bookmark-item {
-		padding: 2px 4px !important;
-		font-size: 12px !important;
-	}
-
-:root:not([customizing]) #nav-bar:focus-within
-{
-	z-index    : 1000        !important;
-	opacity    : 1           !important;
-}
-
-#nav-bar{
-	border-inline: var(--uc-window-drag-space-width) solid var(--toolbar-bgcolor);
-}
-#new-tab-button, #alltabs-button, #scrollbutton-down, .tab-loading-burst{
-	display: none;
-}
-#titlebar {
-	counter-reset: tab
-}
-#titlebar {
-	overflow: none !important;
-}
-
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/hide_tabs_with_one_tab.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* Makes tabs toolbar items zero-height initially and sets enlarge them to fill up space equal to tab-min-height set on tabs. Optionally use privatemode_indicator_as_menu_button.css to replace main menu icon with private browsing indicator while tabs are hidden. */
-/* Firefox 65+ only */
-
-:root[sizemode="normal"] #nav-bar{ --uc-window-drag-space-width: 20px }
-
-#titlebar{ -moz-appearance: none !important; }
-#TabsToolbar{ min-height: 0px !important }
-
-#tabbrowser-tabs, #tabbrowser-tabs > .tabbrowser-arrowscrollbox, #tabbrowser-arrowscrollbox{ min-height: 0 !important; }
-
-:root:not([customizing]) #tabbrowser-tabs .tabs-newtab-button,
-:root:not([customizing]) #tabs-newtab-button,
-:root:not([customizing]) #TabsToolbar-customization-target > .toolbarbutton-1,
-:root:not([customizing]) #TabsToolbar .titlebar-button{
-	-moz-appearance: none !important;
-	height: 0px;
-	padding-top: 0px !important;
-	padding-bottom: 0px !important;
-	-moz-box-align: stretch;
-	margin: 0 !important;
-}
-
-.accessibility-indicator,
-.private-browsing-indicator{ 
-	height: unset !important;
-}
-.accessibility-indicator > hbox{ padding-block: 0 !important }
-
-#tabbrowser-tabs tab:only-of-type {
-	visibility: collapse !important;
-}
-
-/* Button re-styling */
-#tabs-newtab-button:hover,
-#tabbrowser-tabs .tabs-newtab-button:hover{ background-color: var(--toolbarbutton-hover-background) }
-
-#tabs-newtab-button > .toolbarbutton-icon,
-#tabbrowser-tabs .tabs-newtab-button > .toolbarbutton-icon{
-	padding: 0 !important;
-	transform: scale(0.6);
-	background-color: transparent !important;
-}
-/* Extra top padding  in maximized window */
-@media (-moz-os-version: windows-win10){
-	:root[sizemode="maximized"] #navigator-toolbox{ padding-top:7px !important; }
-}
-/* Fix window controls not being clickable */
-:root[tabsintitlebar] #toolbar-menubar[autohide="true"][inactive]{
-	transition: height 0ms steps(1) 80ms;
-}
-#nav-bar{
-	border-inline: var(--uc-window-drag-space-width) solid var(--toolbar-bgcolor);
-}
+/*
+ *  Minimal theme
+ */
 #navigator-toolbox {
-	appearance: toolbar !important; /* Pretty much anything except none */
+    font-family: 'Menlo' !important;
 }
+
+#navigator-toolbox toolbarspring {
+    display: none;
+}
+
+/* Hide filler */
+#customizableui-special-spring2{
+	display:none;
+}
+
+.tab-background{
+	padding-bottom: 0 !important;
+}
+
+#navigator-toolbox #urlbar-container {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+#navigator-toolbox #urlbar {
+    border: none !important;
+    border-radius: 0 !important;
+    box-shadow: none !important;
+}
+
+#navigator-toolbox #PanelUI-button {
+    padding: 0 !important;
+    margin: 0 !important;
+    border: none !important;
+}
+
+#navigator-toolbox #nav-bar {
+    box-shadow: none !important;
+}
+
+#navigator-toolbox #pageActionButton {
+    display: none;
+}
+
+#navigator-toolbox #pageActionSeparator {
+    display: none;
+}
+
+#fullscr-toggler {
+    height: 0 !important;
+}
+
+#navigator-toolbox .urlbar-history-dropmarker {
+    display: none;
+}
+
+#navigator-toolbox #tracking-protection-icon-container {
+    padding-right: 0 !important;
+    border: none !important;
+    display: none !important;
+}
+
+#navigator-toolbox .tab-close-button, #navigator-toolbox #tabs-newtab-button, #firefox-view-button, #alltabs-button {
+    display: none;
+}
+
+#navigator-toolbox #urlbar {
+    padding: 0 !important;
+    padding-left: 3ch !important;
+    font-size: 13px;
+}
+
+#navigator-toolbox #urlbar-background {
+    border: none !important;
+    margin: 0 !important;
+}
+
+#navigator-toolbox .toolbarbutton-1 {
+    width: 22px;
+    padding-left: 1ch !important;
+}
+
+#navigator-toolbox .tabbrowser-tab {
+    font-size: 12px
+}
+
+#navigator-toolbox .tab-background {
+    box-shadow: none!important;
+    border: none !important;
+}
+
+#navigator-toolbox .tabbrowser-tab::after {
+    display: none !important;
+}
+
+#navigator-toolbox #urlbar-zoom-button {
+    border: none !important;
+}
+
+#appMenu-fxa-container, #appMenu-fxa-container + toolbarseparator {
+    display: none !important;
+}
+
+#sync-setup {
+    display: none !important;
+}
+
+/*
+ *  Hamburger menu to the left
+ */
+
+#PanelUI-button {
+    -moz-box-ordinal-group: 0;
+    border-left: none !important;
+    border-right: none !important;
+    position: absolute;
+}
+
+#toolbar-context-menu .viewCustomizeToolbar {
+    display: none !important;
+}
+
+:root[uidensity=compact] #PanelUI-button {
+    margin-top: -30px;
+}
+
+#PanelUI-button {
+    margin-top: -30px;
+}
+
+:root[uidensity=touch] #PanelUI-button {
+    margin-top: -36px;
+}
+
+/*
+ *  Tabs to the right of the urlbar
+ */
+
+/* Modify these to change relative widths or default height */
+#navigator-toolbox{
+    --uc-navigationbar-width: 40vw;
+    --uc-toolbar-height: 40px;
+}
+/* Override for other densities */
+:root[uidensity="compact"] #navigator-toolbox{ --uc-toolbar-height: 30px; }
+:root[uidensity="touch"] #navigator-toolbox{ --uc-toolbar-height: 40px; }
+
+:root[uidensity=compact] #urlbar-container.megabar{
+    --urlbar-container-height: var(--uc-toolbar-height) !important;
+    padding-block: 0 !important;
+}
+:root[uidensity=compact] #urlbar.megabar{
+    --urlbar-toolbar-height: var(--uc-toolbar-height) !important;
+}
+
+/* prevent urlbar overflow on narrow windows */
+/* Dependent on how many items are in navigation toolbar ADJUST AS NEEDED */
+@media screen and (max-width: 1300px){
+    #urlbar-container{ min-width:unset !important }
+}
+
+#TabsToolbar{ margin-left: var(--uc-navigationbar-width); }
+/* #tabbrowser-tabs{ --tab-min-height: var(--uc-toolbar-height) !important; } */
+#tabbrowser-tabs{ --tab-min-height: var(--uc-toolbar-height) !important; }
+
+/* Hide Tab bar with only one Tab - [110] */
+#tabbrowser-tabs .tabbrowser-tab:only-of-type,
+#tabbrowser-tabs .tabbrowser-tab:only-of-type + #tabbrowser-arrowscrollbox-periphery{
+  display:none !important;
+}
+/* #tabbrowser-tabs, #tabbrowser-arrowscrollbox {min-height:0!important;} */
+#tabbrowser-tabs, #tabbrowser-arrowscrollbox {min-height: var(--uc-toolbar-height)!important;}
+/* #TabsToolbar:not(:hover) */ #alltabs-button {display:none !important;}
+
+/* This isn't useful when tabs start in the middle of the window */
+.titlebar-placeholder[type="pre-tabs"],
+.titlebar-spacer[type="pre-tabs"]{ display: none }
+
+#navigator-toolbox > #nav-bar{
+    margin-right:calc(100vw - var(--uc-navigationbar-width));
+    margin-top: calc(0px - var(--uc-toolbar-height));
+}
+
+/* Zero window drag space  */
+:root[tabsintitlebar="true"] #nav-bar{ padding-left: 0px !important; padding-right: 0px !important; }
+
+/* 1px margin on touch density causes tabs to be too high */
+.tab-close-button{ margin-top: 0 !important }
+
+/* Hide dropdown placeholder */
+#urlbar-container:not(:hover) .urlbar-history-dropmarker{ margin-inline-start: -30px; }
+
+/* Fix customization view */
+#customization-panelWrapper > .panel-arrowbox > .panel-arrow{ margin-inline-end: initial !important; }
