--- a/chrome/myuserchrome.css
+++ b/chrome/myuserchrome.css
@@ -150,6 +150,22 @@ min-height: 5px !important;
 	overflow: none !important;
 }
 
+/* Move hover link to the right side */
+#browser {
+  position: relative;
+}
+
+#statuspanel {
+  position: absolute !important;
+  right: 0 !important;
+  left: unset !important;
+  bottom: 0 !important;
+}
+
+#statuspanel-label {
+  direction: ltr !important;
+}
+
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/hide_tabs_with_one_tab.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
